--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="es.usal.tfg.demos">
 
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,6 +31,7 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
 
+        <activity android:name=".InstructionsActivity"></activity>
         <!--
         Para permitir a la camara escribir en el directorio interno de la aplicacion las fotos tomadas
         https://developer.android.com/reference/android/support/v4/content/FileProvider.html
@@ -42,15 +46,9 @@
                 android:resource="@xml/image_path" />
         </provider>
 
-        <!--
- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
-        -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".InstructionsActivity"></activity>
+
+
     </application>
 
 </manifest>
